--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@ Experienced Engineer and Programmer with over 10 years in Industrial Automation,
 </section>
 
 				<!-- Three -->
-			<section id="three" class="wrapper style1 fade-up">
+		<section id="three" class="wrapper style1 fade-up">
     <div class="inner">
         <h2>Get in touch</h2>
         <p>If you have any questions or would like to know more about my professional experience and skills, please feel free to reach out. I'm always open to discussing new opportunities, projects, or collaborations.</p>
         <div class="split style1">
             <section>
-                <form method="post" action="#">
+                <form action="https://formspree.io/f/xoqgawyg" method="POST">
                     <div class="fields">
                         <div class="field half">
                             <label for="name">Name</label>
@@ -149,7 +149,7 @@ Experienced Engineer and Programmer with over 10 years in Industrial Automation,
                         </div>
                         <div class="field half">
                             <label for="email">Email</label>
-                            <input type="text" name="email" id="email" />
+                            <input type="email" name="email" id="email" />
                         </div>
                         <div class="field">
                             <label for="message">Message</label>
@@ -163,12 +163,7 @@ Experienced Engineer and Programmer with over 10 years in Industrial Automation,
             </section>
             <section>
                 <ul class="contact">
-                    <li>
-                        <h3>Address</h3>
-                        <span>241 Lloyd Street<br />
-                        Sudbury, ON P3B 3X3<br />
-                        Canada</span>
-                    </li>
+                   
                     <li>
                         <h3>Email</h3>
                         <a href="mailto:aaronrebuldela@gmail.com">aaronrebuldela@gmail.com</a>
@@ -182,7 +177,6 @@ Experienced Engineer and Programmer with over 10 years in Industrial Automation,
         </div>
     </div>
 </section>
-
 
 
 
