--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Experienced Engineer and Programmer with over 10 years in Industrial Automation,
 									<h2>Power BI Work Sample: Healthcare Industry Case Study with Advanced Data Integration</h2>
 									<p>This work sample presents a detailed case study on the healthcare industry, utilizing Power BI for advanced data visualization and analysis. It demonstrates the use of DAX (Data Analysis Expressions) for sophisticated data modeling and Python scripts for efficient data cleaning and preparation. The project highlights the integration of data from external sources via APIs, with a specific focus on connecting and manipulating healthcare data available on GitHub. This case study showcases the ability to create insightful, interactive dashboards in Power BI that provide a deep dive into healthcare analytics, emphasizing data-driven decision-making in the industry. This sample exemplifies not just expertise in Power BI and DAX, but also proficiency in Python for data manipulation and the innovative use of APIs for data sourcing.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Full View</a></li>
+										<li><a href="generic2.html" class="button">Full View</a></li>
 									</ul>
 								</div>
 							</div>
@@ -84,7 +84,7 @@ Experienced Engineer and Programmer with over 10 years in Industrial Automation,
 									<h2>Google Colab Work Sample: World Happiness Report Analysis using Python</h2>
 									<p>This work sample demonstrates the use of Google Colab for conducting an exploratory data analysis on the World Happiness Report, a global survey correlating personal happiness with various quality of life factors. The dataset, spanning from January 1, 2015, to January 4, 2022, was sourced from Kaggle. The project highlights Python programming skills, particularly in data manipulation, analysis, and visualization. It includes various charts and graphs to represent the insights derived from the dataset effectively. This sample showcases the ability to leverage Google Colab's collaborative and interactive environment for advanced data analysis tasks.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Full View</a></li>
+										<li><a href="generic3.html" class="button">Full View</a></li>
 									</ul>
 								</div>
 							</div>
